#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
AC_INIT([pattern-searching], [1.0], [phantomwolf47@gmail.com])
AM_INIT_AUTOMAKE([dist-xz])
AC_CONFIG_SRCDIR([src/kmp.cpp])
AC_CONFIG_HEADERS([config.h])

# Checks for programs.
AC_PROG_CC([gcc])
AC_PROG_CXX([g++])

# Checks for libraries.

# Checks for header files.
AC_CHECK_HEADERS([iostream string vector])

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.
AC_CONFIG_FILES([Makefile src/Makefile])

AC_OUTPUT
